--- a/models/staging/organization_usage/_org_usage__sources.yml
+++ b/models/staging/organization_usage/_org_usage__sources.yml
@@ -6,3 +6,12 @@ sources:
     schema: organization_usage
     tables:
       - name: warehouse_metering_history
+
+
+models:
+  - name: stg_organization_usage__warehouse_metering_history
+    columns:
+      - name: warehouse_id
+        tests:
+          - unique
+          - not_null
