--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,6 +39,6 @@ models:
   my_new_project:
     # Applies to all files under models/example/
     marts:
-      +materialized: table
+      +materialized: view
     staging:
       +materialized: view
