--- a/models/marts/_marts__models.yml
+++ b/models/marts/_marts__models.yml
@@ -1,5 +1,7 @@
 models:
   - name: snowflake_usage
+    config:
+      
     description: this is a test to create the documentation. 
     columns:
       - name: warehouse_name
@@ -7,5 +9,6 @@ models:
         #   - relationships:
         #       field: warehouse_name
         #       to: ref('stg_organization_usage__warehouse_metering_history')
+        
 
 
