--- a/models/marts/subject-area/_subject-area__models.yml
+++ b/models/marts/subject-area/_subject-area__models.yml
@@ -18,11 +18,11 @@ models:
          description: this is a column level description
          tests:
            - not_null
-           - dbt_utils.not_empty_string
-           - tag_validation:  # Add the custom tag validation test here
-              tags:
-                - confidential
-                - pii 
+         #  - dbt_utils.not_empty_string
+         #  - tag_validation:  # Add the custom tag validation test here
+         #     tags:
+         #       - confidential
+         #       - pii 
         #  meta:
         #   tags: #table level classification & categorization
         #     - confidential
